--- a/py_web/lesson03/.gitignore
+++ b/py_web/lesson03/.gitignore
@@ -36,7 +36,7 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# Unit better_version / coverage reports
 htmlcov/
 .tox/
 .nox/
