--- a/py_web/lesson10/Pipfile
+++ b/py_web/lesson10/Pipfile
@@ -6,6 +6,10 @@ name = "pypi"
 [packages]
 redis = "*"
 redis-lru = "*"
+pymongo = {extras = ["gssapi", "snappy", "srv", "tls"], version = "*"}
+mongoengine = "*"
+phonenumbers = "*"
+faker = "*"
 
 [dev-packages]
 
